--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "semi": true,
+  "trailingComma": "all",
   "tabWidth": 2,
-  "printWidth": 50,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "bracketSameLine": true
+  "semi": false,
+  "singleQuote": true
 }
