--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "d3-array": "^3.2.2",
     "html5-qrcode": "^2.3.4",
     "node-sass": "^7.0.3",
     "prettier": "^2.8.3",
@@ -24,6 +25,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "swiper": "^9.0.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
