--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "trailingComma": "all",
+  "semi": true,
   "tabWidth": 2,
-  "semi": false,
-  "singleQuote": true
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "bracketSameLine": true
 }
