--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^7.0.3",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
+    "react-card-flip": "https://github.com/aaronccwong/react-card-flip/tarball/master",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
