--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
+    "browser-image-compression": "^2.0.0",
     "html5-qrcode": "^2.3.4",
     "node-sass": "^7.0.3",
     "prettier": "^2.8.4",
