T-10: Refactor, better error handling, color changes

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.Flavourify!",
-  "appName": "Flavourify!",
+  "appId": "io.ionic.Flavourify",
+  "appName": "Flavourify",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build",
