--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browser-image-compression": "^2.0.0",
     "html5-qrcode": "^2.3.4",
     "node-sass": "^7.0.3",
+    "notistack": "^2.0.8",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-card-flip": "https://github.com/aaronccwong/react-card-flip/tarball/master",
