--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@capacitor/core": "^4.6.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hello-pangea/dnd": "^16.2.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.8",
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^4.6.3",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
