--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
     "browser-image-compression": "^2.0.0",
+    "framer-motion": "^10.0.1",
     "html5-qrcode": "^2.3.4",
     "node-sass": "^7.0.3",
     "notistack": "^2.0.8",
@@ -32,6 +33,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.0",
     "swiper": "^9.0.3",
     "web-vitals": "^2.1.4"
   },
