--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browser-image-compression": "^2.0.0",
     "framer-motion": "^10.0.1",
     "html5-qrcode": "^2.3.4",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.3",
     "notistack": "^2.0.8",
     "prettier": "^2.8.4",
