--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -64,6 +63,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^4.6.3",
+    "@types/jest": "^29.5.0",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
@@ -75,6 +75,8 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
   }
 }
