--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,13 @@ jobs:
       - run: npm run build --if-present
       - run: npm run test -- --coverage --watchAll=false
       - name: Comment with Test Coverage
-        uses: dkershner6/jest-coverage-commenter-action@v1
+        uses: adRise/jest-cov-reporter@main
         with:
-          github_token: "${{ secrets.GITHUB_TOKEN }}"
+          branch-coverage-report-path: ./coverage/coverage-final.json
+          base-coverage-report-path: ./coverage/master-coverage-final.json
+          delta: 0.3
+          accessToken: ${{ secrets.GITHUB_TOKEN }}
+          fullCoverageDiff: true
+          useSameComment: true
+
+
