--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,7 @@ jobs:
       - run: npm run test
       - name: TestCoverage
         id: testCoverage
-        uses: ziishaned/jest-reporter-action@v0.0.1
+        uses: raulanatol/jest-coverage-comment-action@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          test-command: "npm jest --coverage --collectCoverage=true"
-
 
