--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,13 @@ jobs:
           cache: 'npm'
       - run: npm install
       - run: npm run build --if-present
-      - run: npm run test
+      - run: npm run test --coverage
       - name: TestCoverage
         id: testCoverage
         uses: raulanatol/jest-coverage-comment-action@main
+        permissions:
+          pull-requests: write
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          use-existing-reports: true
 
