--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      pull-requests: write|read
+      contents: read
+      pull-requests: write
 
     strategy:
       matrix:
