--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      pull-requests: write
+
     strategy:
       matrix:
         node-version: [18.x]
@@ -21,8 +25,24 @@ jobs:
           cache: 'npm'
       - run: npm install
       - run: npm run build --if-present
-      - run: npm test --coverage --watchAll
-      - name: Comment with Test Coverage
-        uses: dkershner6/jest-coverage-commenter-action@v1
+      - run:  npm run test -- --coverage --coverageReporters="cobertura"
+
+      - name: Code Coverage
+        uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          github_token: "${{ secrets.GITHUB_TOKEN }}"
+          filename: coverage/cobertura-coverage.xml
+          badge: true
+          fail_below_min: false
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: file
+          thresholds: '35 70'
+
+      - name: Add Coverage To PR
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: code-coverage-results.md
