--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^10.0.1",
     "html5-qrcode": "^2.3.4",
     "jwt-decode": "^3.1.2",
+    "msw": "^1.2.1",
     "node-sass": "^7.0.3",
     "notistack": "^2.0.8",
     "prettier": "^2.8.4",
@@ -40,7 +41,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
+    "test-coverage": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
