--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@use-gesture/react": "^10.2.26",
     "axios": "^1.3.2",
     "browser-image-compression": "^2.0.0",
     "framer-motion": "^10.0.1",
@@ -34,8 +35,9 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
     "react-swipeable": "^7.0.0",
-    "swiper": "^9.0.3",
+    "swiper": "^9.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
