--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,14 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/android/
 .idea
+
+!android/
+android/*
+!android/app/
+android/app/*
+!android/app/src/
+android/app/src/*
+!android/app/src/main/
+android/app/src/main/*
+!android/app/src/main/AndroidManifest.xml
