--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flavourify",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hejs22.github.io/flavourify",
   "dependencies": {
     "@capacitor/android": "4.6.3",
     "@capacitor/core": "^4.6.3",
@@ -25,7 +26,6 @@
     "framer-motion": "^10.0.1",
     "html5-qrcode": "^2.3.4",
     "jwt-decode": "^3.1.2",
-    "msw": "^1.2.1",
     "node-sass": "^7.0.3",
     "notistack": "^3.0.1",
     "prettier": "^2.8.4",
@@ -45,7 +45,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "test-coverage": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\"",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -79,7 +81,9 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^5.0.0",
     "jest": "^29.5.0",
+    "msw": "^1.2.1",
     "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
   }
