--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hello-pangea/dnd": "^16.2.0",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.8",
@@ -31,13 +32,15 @@
     "react": "^18.2.0",
     "react-card-flip": "https://github.com/aaronccwong/react-card-flip/tarball/master",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.1",
     "react-swipeable": "^7.0.0",
     "swiper": "^9.2.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
