--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flavourify",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@capacitor/android": "4.6.3",
@@ -13,9 +13,6 @@
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.8",
     "@tanstack/react-query": "^4.24.9",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -81,6 +78,9 @@
     "jest": "^29.5.0",
     "msw": "^1.2.1",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0"
   }
 }
