--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^4.6.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.0",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
@@ -78,9 +81,6 @@
     "jest": "^29.5.0",
     "msw": "^1.2.1",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0"
+    "typescript": "^4.9.5"
   }
 }
