--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 GENERATE_SOURCEMAP=false
-REACT_APP_PROD_API_URL=https://2fbf-212-51-207-126.ngrok-free.app
+REACT_APP_PROD_API_URL=https://40d1-212-51-207-126.ngrok-free.app
